# project-cyclopentane

./: .gitattributes  .gitignore  README.md  all-sims.sh  env.sh  pyproject.toml  save.tgz  save_old_theory.tgz  sim.sh  tar.sh
calc/: run.sh  submit_automech.sh  submit_dft1.sh  submit_dft2.sh  submit_mechdriver.sh  submit_mess.sh  submit_setup.sh  submit_workflow.sh  template.sh  worker_bebop-template.sh  worker_local-start.sh
data/: 0a_A_rh-oh_v0_gen.json  0a_A_rh-oh_v0_ste.json  0a_B_rh-ho2_v0_gen.json  0a_B_rh-ho2_v0_ste.json  0a_C_r_v0_gen.json  0a_C_r_v0_ste.json  0a_D_r-o2_v0_gen.json  0a_D_r-o2_v0_ste.json  1e_A_rh-oh_v0_gen.json  1e_A_rh-oh_v0_ste.json  1e_B_rh-ho2_v0_gen.json  1e_B_rh-ho2_v0_ste.json  1e_C_r_v0_gen.json  1e_C_r_v0_ste.json  1e_D_r-o2_v0_gen.json  1e_D_r-o2_v0_ste.json  1e_X_species_v0_gen.json  1e_X_species_v0_ste.json  1e_Y_reactions_v0_gen.json  1e_Y_reactions_v0_ste.json  1ene_named.json  1ene_raw.json  2epoxy12_named.json  2epoxy12_raw.json  3epoxy13_raw.json  A_build_rh-oh_initiation_p1v0.json  A_build_rh-oh_initiation_p2v0.json  A_build_rh-oh_initiation_p2v1.json  A_rh-oh_0a_v0_calc.json  A_rh-oh_0a_v0_gen.json  A_rh-oh_0a_v0_ste.json  A_rh-oh_1e-1_v0_calc.json  A_rh-oh_1e-1_v0_gen.json  A_rh-oh_1e-1_v0_ste.json  A_rh-oh_1e-2_v0_gen.json  A_rh-oh_1e-2_v0_ste.json  A_rh-oh_2x_v0_calc.json  A_rh-oh_2x_v0_gen.json  A_rh-oh_2x_v0_ste.json  A_rh-oh_p1v0.json  (+191 more)
mechanism_generation_example/: species1.csv  species10.csv  species13.csv  species15.csv  species2.csv  species5.csv  species8.csv  species9.csv  unstab.sh
notebooks/: 01_rename.ipynb  (+139 more)
(+1528 files in other folders)
